changed ds link

--- a/Project ME/portfolio_v2.html
+++ b/Project ME/portfolio_v2.html
@@ -43,8 +43,7 @@
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                 <div class="container-tab cardmain margins text-center">
                     <img src="Photos/big_sur_akanksha.JPG" class="img-fluid main-img mx-auto d-block" alt="My Photo">
-                    <div class="title-about-me">SOFTWARE ENGINEER, 
-                    <a href="https://www.portal.mu-sigma.com/msu/DecisionScientistCertificate/6567-Aug2016-69371.html" target="_blank">DECISION SCIENTIST</a>
+                    <div class="title-about-me">SOFTWARE ENGINEER 
                     </div>
                     <div class="card-body about-me">Hi there! I am Akanksha Tyagi, a second year CS graduate student at <a href="https://viterbischool.usc.edu/" target>USC</a>.
                         I enjoy working on projects related to Web Development, Deep Learning and Machine Learning. Prior to joining USC, I worked as a Decision Scientist at Mu Sigma. <br>Get in touch <a href="mailto:akankshatyagi18@gmail.com?" target="_blank">akankshatyagi18@gmail.com</a>
@@ -70,7 +69,7 @@
                         <div class="card-body projects-desc">
                         With the help of this web application, you can search for places nearby or at a specific location.
                         The application also provides the feature to bookmark a place and visit it later.<br>
-                        <a href="#" class="btn btn-secondary" role="button">Code</a>
+                        <a href="https://github.com/akankshaty/Web-Technologies/tree/master/Travel%20and%20Entertainment%20Search" target="_blank" class="btn btn-secondary" role="button">Code</a>
                         </div>
                     </div>
                   </div>
@@ -130,7 +129,7 @@
             
         <div class="tab-pane fade container-tab" id="nav-exp" role="tabpanel" aria-labelledby="nav-experience-tab">
             <div class="container-tab col-md-12 col-sm-12">
-                <div class="card-header bg-info title text-center">Decision Scientist, Mu Sigma, India <span class="position">(Sep 2014-Sep 2016)</span></div>
+                <div class="card-header bg-info title text-center"> <a href="https://www.portal.mu-sigma.com/msu/DecisionScientistCertificate/6567-Aug2016-69371.html" target="_blank">Decision Scientist, </a>Mu Sigma, India <span class="position">(Sep 2014-Sep 2016)</span></div>
                         <div class="container  col-md-8 exp-work">
                                 -Worked with Fortune 500 clients to design solutions for their business problems<br>
                                 -Helped the largest insurance client in tracking claims metrics to improve their decision making<br>
